# kedi-lang

./: .gitignore  Cargo.toml  LANGUAGE.md  README.md  id.wat  rust-toolchain.toml  test.wasm  test.wat
.bin/rust-1.78.0/cargo-nextest/0.9.72/: .crates.toml  .crates2.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  website.yml
cli/: Cargo.toml
cli/src/: args.rs  compile.rs  main.rs  run.rs
compiler/: Cargo.toml  README.md
compiler/example/: id.kedi  simple.kedi  two_funs.kedi
compiler/lib/: prelude.kedi
compiler/src/: lib.rs  main.rs  phase.rs  runner.rs  scratchpad.rs  stdlib.kedi
compiler/src/codegen/: codegen.rs  fragment.rs  mod.rs  types.rs
compiler/src/error/: core.rs  mod.rs  pretty.rs
compiler/src/linker/: linked.rs  linker.rs  mk_wasm.rs  mod.rs  prims.rs
compiler/src/parser/: error.rs  grammar.lalrpop  kedi-lang.pest  located.rs  mod.rs  parser.rs  syntax.rs
compiler/src/pp/: mod.rs
compiler/src/renamer/: error.rs  mod.rs  plain.rs  renamed.rs  renamer.rs
compiler/src/simplifier/: mod.rs  simple.rs  simplifier.rs
compiler/src/simplifier/optimizations/: mod.rs  prune_single_use.rs  remove_nops.rs
compiler/src/util/: ax.rs  bimap.rs  kcache.rs  loc.rs  mod.rs  pp.rs
compiler/tests/: test_compilation.rs  test_unit.rs  utils.rs
compiler/tests/data/aspirations/: fibonacci.kedi  io.kedi  sort.kedi
compiler/tests/data/examples/: assignment.kedi  fibonacci.kedi  id.kedi  id_with_unused_var.kedi  infinite_loop.kedi  inline_wasm.kedi  two_funs.kedi
compiler/tests/tests/: compilation.rs  unit.rs
compiler/tests/util/: mk_tests.rs  wasm_utils.rs
compiler_old/: Cargo.toml
compiler_old/lib/: prelude.kedi
compiler_old/src/: codegen.rs  lib.rs  phase.rs  runner.rs  scratchpad.rs
compiler_old/src/codegen_wasm/: codegen.rs  fragment.rs  linked.rs  linker.rs  mk_wasm.rs  mod.rs  prims.rs  rts.rs
compiler_old/src/error/: core.rs  pretty.rs
compiler_old/src/interpreter/: interpret.rs  mod.rs  value.rs
compiler_old/src/simplifier/: simple.rs  simplifier.rs
compiler_old/src/simplifier/optimizations/: mod.rs  prune_single_use.rs  remove_nops.rs
compiler_old/src/util/: bimap.rs  loc.rs  mod.rs
compiler_old/tests/: test_integration.rs
compiler_old/tests/data/aspirations/: io.kedi  sort.kedi
compiler_old/tests/data/examples/: fibonacci.kedi  id.kedi  id_with_unused_var.kedi  if.kedi
compiler_old/tests/tests/: compilation.rs  mod.rs  unit.rs
compiler_old/tests/util/: mod.rs  wasm_utils.rs
compiler_web/: Cargo.toml
compiler_web/src/: lib.rs
design/: 00-the-big-idea.md  01-property-testing.md  11-module-system.md
nix/: sources.json
online/: Cargo.toml  build.sh
online/src/: lib.rs
wasm_exec/: Cargo.toml
wasm_exec/src/: exec.rs  exec_v8.rs  exec_wasmtime.rs  lib.rs
website/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
website/assets/: style_vars.json
website/src/: common.css  index.tsx
website/src/components/: Editor.tsx  KediIde.tsx
website/src/pages/home/: index.tsx
website/src/utils/: run_wasm.ts  s_cond.ts  style_vars.ts
xtask/: Cargo.toml
xtask/src/: main.rs
yaks/sexpr/: Cargo.toml
yaks/sexpr/src/: ast.rs
yaks/sexpr_derive/: Cargo.toml
yaks/sexpr_derive/src/: lib.rs
