[package]
name = "kedi-lang"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
indices = "0.3.1"
miette = "7.2.0"
pest = "2.7.5"
pest_derive = "2.7.5"
pretty = "0.12.3"
source-map = "0.15.0"
ustr = "1.0.0"
wasmprinter = "0.209.1"
wast = "209.0.1"

# We're not using this - but we need to enable the 'js' feature
getrandom = { version = "*", features = ["js"] }

[dev-dependencies]
test-case = "3.3.1"
test_each_file = "0.3.2"
wasmparser = "0.210.0"
wasmtime = "21.0.1"
