[package]
name = "kedi-lang"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
bimap = "0.6.3"
indices = "0.3.1"
miette = "7.2.0"
pretty = "0.12.3"
wasmprinter = "0.209.1"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
# We're not using this - but we need to enable the 'js' feature for the wasm compilation
getrandom = { version = "*", features = ["js"] }
wasm-encoder = "0.215.0"

[dev-dependencies]
rusty_v8 = "0.32.1"
serde = "1.0.209"
serde_json = "1.0.127"
serde_v8 = "0.215.0"
test-case = "3.3.1"
test_each_file = "0.3.2"
wasmparser = "0.210.0"
