[package]
name = "kedi-lang"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
bimap = "0.6.3"
indices = "0.3.1"
miette = "7.2.0"
pretty = "0.12.3"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
sexpr = { path = "../yaks/sexpr" }
sexpr_derive = { path = "../yaks/sexpr_derive" }
# Wasm utilities
wasm-encoder = { version = "0.215.0", optional = true }
wasmprinter = { version = "0.209.1", optional = true }
# We're not using this - but we need to enable the 'js' feature 
# or the wasm compilation
getrandom = { version = "*", features = ["js"] }
num-bigint = "0.4.6"
proc-macro2 = "1.0.92"

[dev-dependencies]
wasm-exec = { path = "../wasm_exec" }
test-case = "3.3.1"
test_each_file = "0.3.2"
wasmparser = "0.210.0"

[features]
codegen-wasm = ["wasm-encoder", "wasmprinter"]
codegen-js = []
